Fix: horizontal scroll

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,7 +74,7 @@ small {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    width: 280px;
+    width: 320px;
 }
 
 .install {
@@ -89,7 +89,7 @@ small {
 }
 .install__link {
     align-self: flex-end;
-    width: 280px;
+    width: 320px;
     color: inherit;
     background: rgba(255, 255, 255, 0.8);
     border-radius: 6px;
